LMS-47: modify html files to uniform structure

--- a/App_Web/src/main/resources/templates/course/courses.html
+++ b/App_Web/src/main/resources/templates/course/courses.html
@@ -8,15 +8,14 @@
     <link href="/css/fontawesome/icons.css" rel="stylesheet">
 </head>
 <body>
-
 <nav th:replace="~{plugins/menu :: menu}"></nav>
 <div class="main">
     <div class="left-side-area">
         <h1 class="header">Courses</h1>
-        <h1 class="subheader">List<br> of all courses</h1>
+        <h2 class="subheader">List<br> of all courses</h2>
         <a sec:authorize="hasAnyAuthority('MANAGER')" href="/courses/createForm" class="button-active">Create</a>
     </div>
-    <div>
+    <div class="main-area">
         <div th:insert="~{plugins/pagination :: pagination}" th:with="firstVer=${courses}"></div>
         <table class="table">
             <thead>
