--- a/App_Web/src/main/resources/templates/new_password.html
+++ b/App_Web/src/main/resources/templates/new_password.html
@@ -7,22 +7,27 @@
 </head>
 <body>
 <nav th:replace="~{plugins/menu :: menu}"></nav>
-
-<h1>Please enter new password</h1>
-
-<form th:action="@{/auth/changePassword}" method="POST">
-    <table>
-        <input type="hidden" name="userId" th:value="${userId}">
-        <tr>
-            <td class="text">New password</td>
-            <td><input type="password" placeholder="Enter new password" name="newPassword" required></td>
-        </tr>
-        <tr>
-            <td class="text">Confirm password</td>
-            <td><input type="password" placeholder="Confirm password" name="confirmPassword" required></td>
-        </tr>
-    </table>
-    <input type="submit" value="Change"/>
-</form>
+<div class="main">
+    <div class="left-side-area">
+        <h1 class="header">Password Recovery</h1>
+        <h2 class="subheader">Set up a new password for your account</h2>
+    </div>
+    <div class="main-area">
+        <form th:action="@{/auth/changePassword}" method="POST">
+            <table>
+                <input type="hidden" name="userId" th:value="${userId}">
+                <tr>
+                    <td class="text">New password</td>
+                    <td><input type="password" placeholder="Enter new password" name="newPassword" required></td>
+                </tr>
+                <tr>
+                    <td class="text">Confirm password</td>
+                    <td><input type="password" placeholder="Confirm password" name="confirmPassword" required></td>
+                </tr>
+            </table>
+            <input type="submit" value="Change"/>
+        </form>
+    </div>
+</div>
 </body>
 </html>
