--- a/App_Web/src/main/resources/templates/plugins/menu.html
+++ b/App_Web/src/main/resources/templates/plugins/menu.html
@@ -1,4 +1,4 @@
-<nav th:fragment="menu" class="menu">
+<nav th:fragment="menu" class="menu" xmlns:sec="http://www.springframework.org/schema/security">
     <nav class="menu-left">
         <img src="/images/logo.jpg" alt="logo" style="width:50px">
         <p><a class="text" href="/">Home</a></p>
