--- a/App_Web/src/main/resources/templates/create_homework.html
+++ b/App_Web/src/main/resources/templates/create_homework.html
@@ -7,35 +7,30 @@
     <link rel="stylesheet" type="text/css" href="/static/css/main.css" th:href="@{/css/main.css}">
 </head>
 <body>
-
 <nav th:replace="~{plugins/menu :: menu}"></nav>
+<div class="main">
+    <div class="left-side-area">
+        <h1 class="header">Create homework</h1>
+        <h1 class="subheader">Enter new data</h1>
+    </div>
+    <div class="main-area">
+        <form action="/homeworks/create" method="post">
+            <table>
+                <tr>
+                    <td class="text" type="text">Student id</td>
+                    <td><input type="text" name="student.id" th:value="${2}"></td>
+                    <!--FIXME:remove hardcoded id from session-->
+                </tr>
+                <tr>
+                    <td class="text">Comment</td>
+                    <td><input type="text" name="comment"></td>
+                </tr>
 
-<div class="left-side-area">
-    <h1 class="header">Create homework</h1>
-    <h1 class="subheader">Enter new data</h1>
-    <h3><a href="#" onclick="history.back();return false;" class="history-back">
-        <-Back</a></h3>
-
+            </table>
+            <input type="submit" value="Submit">
+            <input type="reset" value="Reset">
+        </form>
+    </div>
 </div>
-
-<div class="main-area">
-    <form action="/homeworks/create" method="post">
-        <table>
-            <tr>
-                <td class="text" type="text">Student id</td>
-                <td><input type="text" name="student.id" th:value="${2}"></td>
-                <!--FIXME:remove hardcoded id from session-->
-            </tr>
-            <tr>
-                <td class="text">Comment</td>
-                <td><input type="text" name="comment"></td>
-            </tr>
-
-        </table>
-        <input type="submit" value="Submit">
-        <input type="reset" value="Reset">
-    </form>
-</div>
-
 </body>
 </html>
