--- a/App_Web/src/main/resources/templates/create_user.html
+++ b/App_Web/src/main/resources/templates/create_user.html
@@ -7,17 +7,13 @@
     <link rel="stylesheet" type="text/css" href="/static/css/main.css" th:href="@{/css/main.css}">
 </head>
 <body>
-
 <nav th:replace="~{plugins/menu :: menu}"></nav>
-
 <div class="main">
     <div class="left-side-area">
         <h1 class="header">Create User</h1>
-        <h1 class="subheader">Complete your<br> user profile</h1>
-
+        <h2 class="subheader">Complete your<br> user profile</h2>
     </div>
-
-    <div>
+    <div class="main-area">
         <form action="/users/create" method="post">
             <table>
                 <tr>
