--- a/App_Web/src/main/resources/templates/homework.html
+++ b/App_Web/src/main/resources/templates/homework.html
@@ -7,22 +7,22 @@
 </head>
 <body>
 <nav th:replace="~{plugins/menu :: menu}" class="menu"></nav>
-<div class="left-side-area">
-    <h1 class="header">Show</h1>
-    <h2>Homework</h2>
-    <h3><a href="#" onclick="history.back();return false;" class="history-back">
-        <-Back</a></h3>
-</div>
-<div class="main-area">
-    <h4>Full student name</h4>
-    <p th:text="${homework.student.firstName} + ' ' + ${homework.student.lastName} + ' ' + ${homework.student.patronymicName} ">
-        Full name</p>
-    <h4>Comment</h4>
-    <p th:text="${homework.comment}">Comment</p>
-    <h4>Filelink (temp info)</h4>
-    <p th:text="${homework.fileLink}">File link</p>
-    <h4>Homework mark</h4>
-    <p th:text="${homework.mark}">Mark</p>
+<div class="main">
+    <div class="left-side-area">
+        <h1 class="header">Homework</h1>
+        <h2 class="subheader">Homework Detail Info</h2>
+    </div>
+    <div class="main-area">
+        <h4>Full student name</h4>
+        <p th:text="${homework.student.firstName} + ' ' + ${homework.student.lastName} + ' ' + ${homework.student.patronymicName} ">
+            Full name</p>
+        <h4>Comment</h4>
+        <p th:text="${homework.comment}">Comment</p>
+        <h4>Filelink (temp info)</h4>
+        <p th:text="${homework.fileLink}">File link</p>
+        <h4>Homework mark</h4>
+        <p th:text="${homework.mark}">Mark</p>
+    </div>
 </div>
 </body>
 </html>
