--- a/App_Web/src/main/resources/templates/login.html
+++ b/App_Web/src/main/resources/templates/login.html
@@ -7,24 +7,29 @@
 </head>
 <body>
 <nav th:replace="~{plugins/menu :: menu}"></nav>
-
-<h1>Please Log In</h1>
-
-<form th:action="@{/login}" method="POST">
-    <div>
-        <input type="email" name="username" placeholder="Email" required/>
+<div class="main">
+    <div class="left-side-area">
+        <h1 class="header">Sing In</h1>
+        <h2 class="subheader">Enter your account credentials to log in to the system</h2>
     </div>
-    <div>
-        <input type="password" name="password" placeholder="Password" required/>
-    </div>
-    <input type="submit" value="Log in"/>
+    <div class="main-area">
+        <form th:action="@{/login}" method="POST">
+            <div>
+                <input type="email" name="username" placeholder="Email" required/>
+            </div>
+            <div>
+                <input type="password" name="password" placeholder="Password" required/>
+            </div>
+            <input type="submit" value="Log in"/>
 
-    <div th:if="${param.error}" style="color: red">
-        Bad credentials
+            <div th:if="${param.error}" style="color: red">
+                Bad credentials
+            </div>
+        </form>
+        <form th:action="@{/auth/recoveryPass}" method="GET">
+            <button>Forgot your password?</button>
+        </form>
     </div>
-</form>
-<form th:action="@{/auth/recoveryPass}" method="GET">
-    <button>Forgot your password?</button>
-</form>
+</div>
 </body>
 </html>
