--- a/App_Web/src/main/resources/templates/request/update_request.html
+++ b/App_Web/src/main/resources/templates/request/update_request.html
@@ -7,15 +7,13 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-
 <nav th:replace="~{plugins/menu :: menu}" class="menu"></nav>
-
 <div class="main">
     <div class="left-side-area">
         <h1 class="header">Update</h1>
         <h2>Request number: <span th:text="${request.id}"></span></h2>
     </div>
-    <div>
+    <div class="main-area">
         <form th:action="'/requests/update/' + ${request.id}" method="post" th:object="${request}">
             <table>
                 <tr>
