--- a/App_Web/src/main/resources/templates/index.html
+++ b/App_Web/src/main/resources/templates/index.html
@@ -13,7 +13,9 @@
         <h1 class="header">Learning Management System</h1>
         <h2 class="subheader">Welcome to the Learning Management System. Wish you a happy journey!</h2>
     </div>
-    <div class="main-area"></div>
+    <div class="main-area">
+        <img class="home-background" th:src="@{/images/home/home_background.png}" alt="Man and woman with laptops"/>
+    </div>
 </div>
 </body>
 </html>
