LMS-47: uniform menu insert to all pages

--- a/App_Web/src/main/resources/templates/homework.html
+++ b/App_Web/src/main/resources/templates/homework.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
-<nav th:replace="~{plugins/menu :: menu}" class="menu"></nav>
+<nav th:replace="~{plugins/menu :: menu}"></nav>
 <div class="main">
     <div class="left-side-area">
         <h1 class="header">Homework</h1>
