--- a/App_Web/src/main/resources/templates/request/requests.html
+++ b/App_Web/src/main/resources/templates/request/requests.html
@@ -8,7 +8,7 @@
     <link href="/css/fontawesome/icons.css" rel="stylesheet">
 </head>
 <body>
-<nav th:replace="~{plugins/menu :: menu}" class="menu"></nav>
+<nav th:replace="~{plugins/menu :: menu}"></nav>
 <div class="main">
     <div class="left-side-area">
         <h1 class="header">Show</h1>
