--- a/App_Web/src/main/resources/static/css/main.css
+++ b/App_Web/src/main/resources/static/css/main.css
@@ -46,8 +46,9 @@ body {
 
 .left-side-area {
     width: 20%;
-    min-width: 230px;
+    min-width: 250px;
     max-width: 500px;
+    padding-left: 20px;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
