--- a/App_Web/src/main/resources/templates/request/requests.html
+++ b/App_Web/src/main/resources/templates/request/requests.html
@@ -17,7 +17,6 @@
         <h3><a th:href="@{requests/create}" class="button-active">Create request</a></h3>
     </div>
     <div class="main-area">
-        <div th:insert="~{plugins/pagination :: pagination}" th:with="firstVer=${courses}"></div>
         <table class="table">
             <tr class="table-header">
                 <th></th>
@@ -28,26 +27,29 @@
                 <th>Status</th>
                 <th>Actions</th>
             </tr>
-            <tr th:each="request : ${requests}" th:object="${request}" class="table-data">
+            <tr th:each="request : ${requests}" class="table-data">
                 <td>
-                    <a th:href="@{/requests/__*{id}__}" class="button">
+                    <a th:href="@{/requests/__${request.id}__}" class="button">
                         <i class="fa-solid fa-eye" title="View"></i>
                     </a>
                 </td>
                 <td>
-                    <a th:href="@{/requests/update/__*{id}__}" class="button">
+                    <a th:href="@{/requests/update/__${request.id}__}" class="button">
                         <i class="fa-solid fa-file-pen" title="Edit"></i>
                     </a>
                 </td>
                 <td></td>
-                <td><a th:href="@{/users/__*{user.id}__}" th:text="*{user.firstName} + ' ' + *{user.lastName}">User</a>
+                <td>
+                    <a th:href="@{/users/__${request.user.id}__}" th:text="${request.user.firstName} + ' ' + ${request.user.lastName}">User</a>
                 </td>
-                <td><a th:href="@{/courses/__*{course.id}__}" th:text="*{course.title}">Course title</a></td>
-                <td th:text="*{status}"></td>
-                <form th:action="'/requests/update/' + ${request.id}" method="post" th:object="${request}">
+                <td>
+<!--                    <a th:href="@{/courses/__${request.course.id}__}" th:text="${request.course.title}">Course title</a>-->
+                </td>
+                <td th:text="${request.status}"></td>
+                <form th:action="'/requests/update/' + ${request.id}" method="post">
                     <td>
-                        <input type="hidden" name="user.id" th:value="*{user.id}">
-                        <input type="hidden" name="course.id" th:value="*{course.id}">
+                        <input type="hidden" name="user.id" th:value="${request.user.id}">
+<!--                        <input type="hidden" name="course.id" th:value="${request.course.id}">-->
                         <input type="hidden" name="status" th:value="CANCELLED">
                         <input type="submit" value="Deactivate" class="button-active"/>
                     </td>
