LMS-39: Light Correct to use

--- a/App_Web/src/main/resources/templates/request/create_request.html
+++ b/App_Web/src/main/resources/templates/request/create_request.html
@@ -30,11 +30,11 @@
                 <tr>
                     <td>Curse</td>
                     <td>
-                        <select th:name="course.id">
-                            <option th:each="course : ${courses}" th:object="${course}" th:value="*{id}"
-                                    th:text=*{title}>
-                                COURSE
-                        </select>
+<!--                        <select th:name="course.id">-->
+<!--                            <option th:each="course : ${courses}" th:object="${course}" th:value="*{id}"-->
+<!--                                    th:text=*{title}>-->
+<!--                                COURSE-->
+<!--                        </select>-->
                     </td>
                 </tr>
                 <tr>
