LMS-47: add client side confirm password verification

--- a/App_Web/src/main/resources/templates/new_password.html
+++ b/App_Web/src/main/resources/templates/new_password.html
@@ -4,6 +4,8 @@
     <title>Please Log In</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/static/css/main.css" th:href="@{/css/main.css}">
+    <script defer src="/js/jquery-3.6.1.js"></script>
+    <script type="module" src="/js/password-confirmation.js"></script>
 </head>
 <body>
 <nav th:replace="~{plugins/menu :: menu}"></nav>
@@ -18,14 +20,14 @@
                 <input type="hidden" name="userId" th:value="${userId}">
                 <tr>
                     <td class="text">New password</td>
-                    <td><input type="password" placeholder="Enter new password" name="newPassword" required></td>
+                    <td><input id="input-password" type="password" placeholder="Enter new password" name="newPassword" required></td>
                 </tr>
                 <tr>
                     <td class="text">Confirm password</td>
-                    <td><input type="password" placeholder="Confirm password" name="confirmPassword" required></td>
+                    <td><input id="input-confirm-password" type="password" placeholder="Confirm password" name="confirmPassword" required></td>
                 </tr>
             </table>
-            <input type="submit" value="Change"/>
+            <input id="input-submit" type="submit" value="Change"/>
         </form>
     </div>
 </div>
