--- a/App_Web/src/main/resources/static/css/main.css
+++ b/App_Web/src/main/resources/static/css/main.css
@@ -117,6 +117,11 @@ li {
 .table {
     border-collapse: collapse;
     max-width: 1000px;
+    margin-right: 15px;
+}
+
+.table tbody {
+    background: white;
 }
 
 td, th {
