--- a/App_Web/src/main/resources/templates/lesson/lessons.html
+++ b/App_Web/src/main/resources/templates/lesson/lessons.html
@@ -33,17 +33,17 @@
             <th:block th:each="lesson : ${lessons}" th:object="${lesson}" class="table-data">
                 <tr class="table-data">
                     <td>
-                        <a>
+                        <a th:href="'/lessons/' + ${lesson.id}">
                             <i class="fa-solid fa-eye" title="View"></i>
                         </a>
                     </td>
                     <td>
-                        <a>
+                        <a th:href="'/lessons/updateForm/' + ${lesson.id}">
                             <i class="fa-solid fa-file-pen" title="Edit"></i>
                         </a>
                     </td>
                     <td>
-                        <a>
+                        <a th:href="'/lessons/delete/' + ${lesson.id}">
                             <i class="fa-solid fa-trash-can" title="Delete"></i>
                         </a>
                     </td>
