LMS-46: added scrolling class on css, and refactored lesson.html

--- a/App_Web/src/main/resources/static/css/main.css
+++ b/App_Web/src/main/resources/static/css/main.css
@@ -208,3 +208,11 @@ input:disabled {
 #popup:target {
     display: block;
 }
+
+.scrolling {
+    height: 100px;
+    width: 200px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    background: #fff;
+}
