LMS-39: Correct to use

--- a/App_Web/src/main/resources/templates/users.html
+++ b/App_Web/src/main/resources/templates/users.html
@@ -16,7 +16,7 @@
         <a href="/users/create" class="button-active">Create</a>
     </div>
     <div class="main-area">
-        <div th:insert="~{plugins/pagination::pagination}" th:with="firstVer=${courses}"></div>
+        <div th:insert="~{plugins/pagination::pagination}" th:with="firstVer=${users}"></div>
         <table class="table">
             <thead>
             <tr class="table-header">
